# dayforge

./: .gitignore  CMakeLists.txt  README.md
docs/: DAILY_LOG.md  DESIGN.md
include/dayforge/: Dashboard.hpp  Entry.hpp  Ledger.hpp  Query.hpp  Report.hpp
scripts/: run-local.ps1
src/: Dashboard.cpp  Entry.cpp  Ledger.cpp  Query.cpp  Report.cpp  main.cpp
tests/: test_ledger.cpp
